added initial components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!--Image-->
-<div class="bg-purple-400 h-72">
-</div>
+<header>
+  <div class="w-full bg-cover bg-center h-80"
+       style="background-image: url(https://i.pinimg.com/originals/e9/25/94/e925941e2b5c361476176810c0a532c0.jpg);">
+  </div>
+</header>
 
 <!--Names -->
 <div class="bg-grayBackground-light h-screen">
@@ -12,7 +15,7 @@
       {{secondName}}
     </div>
     <button class="rounded-2xl bg-yellow-600 p-3" (click)="onClick('clicked')">
-      {{buttonName}}
+      RSVP
     </button>
   </div>
 </div>
