--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <!-- Description & Names -->
 <div>
   <div class="flex flex-col items-center">
-    <div class="font-mono mt-6 ml-16 text-2xl">You are warmly invited to the wedding of</div>
+    <div class="mt-6 ml-16 text-6xl font-dancingScript opacity-100">You are warmly invited to the wedding of</div>
     <div class="flex-initial font-bodyLuci text-9xl tracking-wide my-6">
       {{firstName}}
     </div>
@@ -16,8 +16,40 @@
     <div class="flex-initial font-bodyLuci text-9xl tracking-wide my-6">
       {{secondName}}
     </div>
-    <button *ngIf="false" class="rounded-2xl bg-yellow-600 p-3"  (click)="onClick('clicked')">
-      RSVP
-    </button>
+    <hr class="mt-10" style=" border-top: 8px solid #b8860b; border-radius: 5px; width: 75%;">
   </div>
+<div *ngIf="true" class="container mx-auto w-full h-full">
+  <div class="relative wrap overflow-hidden p-10 h-full">
+    <!--first item-->
+    <div class="mb-8 flex justify-between items-center w-full right-timeline">
+      <div class="order-1 w-5/12  text-center align-middle text-4xl font-dancingScript">Ceremony at Xaghra basilica</div>
+      <!--circle-->
+      <div class="z-20 flex items-center order-1  ml-0.5 text-5xl">
+        <fa-icon style="color: darkgoldenrod;" [icon]="faChurch"></fa-icon>
+      </div>
+      <!--icon-->
+      <div class="order-1 rounded-lg w-5/12 py-4 text-center align-middle text-2xl font-dancingScript">
+        5:00 p.m.
+      </div>
+    </div>
+
+    <div class="mb-8 flex justify-between items-center w-full right-timeline">
+      <div class="order-1 w-5/12  text-center align-middle text-4xl font-dancingScript">Reception at Villa Fiorita</div>
+      <!--circle-->
+      <div class="z-20 flex items-center order-1  ml-0.5 text-5xl">
+        <fa-icon style="color: darkgoldenrod;" [icon]="faGlassCheers"></fa-icon>
+      </div>
+      <!--icon-->
+      <div class="order-1 rounded-lg w-5/12 py-4 text-center align-middle text-2xl font-dancingScript">
+        6:30 p.m.
+      </div>
+    </div>
+  </div>
+</div>
+<div class="flex flex-col items-center w-full mb-10">
+  <button *ngIf="true"
+          class="bg-transparent hover:bg-yellow-600 text-yellow-700 font-semibold hover:text-white py-3 px-8 border border-yellow-700 hover:border-transparent rounded"
+          (click)="onClick('clicked')">RSVP
+  </button>
+</div>
 </div>
