--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </header>
 <!-- Description & Names -->
 <div class="animate-fade-in-down2">
-  <div class="flex flex-col items-center">
+  <div class="flex flex-col items-center bg-center bg-cover" style="background-image: url(./assets/petalsCover.png);">
     <div class="mt-6 ml-16 text-6xl font-dancingScript opacity-100">{{weddingInfo.invitationMessage}}</div>
     <div class="flex-initial font-bodyLuci text-9xl tracking-wide my-6">
       {{weddingInfo.bridesName}}
@@ -52,3 +52,4 @@
   </button>
 </div>
 </div>
+
