--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="mb-8 flex justify-between items-center w-full right-timeline">
+    <div class="flex justify-between items-center w-full right-timeline">
       <div class="order-1 w-5/12  text-center align-middle text-4xl font-dancingScript">Reception at {{weddingInfo.receptionVenue}}</div>
       <!--circle-->
       <div class="z-20 flex items-center order-1  ml-0.5 text-5xl">
@@ -45,7 +45,7 @@
     </div>
   </div>
 </div>
-<div class="flex flex-col items-center w-full mb-10">
+<div class="flex flex-col items-center w-full pb-5">
   <button *ngIf="true"
           class="animate-bounce bg-transparent hover:bg-yellow-600 text-yellow-700 font-semibold hover:text-white py-3 px-8 border border-yellow-700 hover:border-transparent rounded"
           (click)="onClick('clicked')">RSVP
