--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 @import url('./fonts/stylesheet.css');
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
