--- a/src/app/home-component/app.component.html
+++ b/src/app/home-component/app.component.html
@@ -1,5 +1,5 @@
 <!--  Invitation Message-->
-<div class="lg:flex">
+<div class="lg:flex animate-fade-in-down2">
   <div class="w-full lg:w-1/2 h-screen bg-photo bg-cover bg-center">
     <div class="absolute inset-x-0 bottom-0 flex flex-col lg:w-1/2">
       <div class="text-white font-bodyLuci ml-6 text-6xl lg:text-9xl lg:ml-10">
@@ -17,7 +17,7 @@
     <div class="text-yellow-800 text-2xl lg:text-4xl font-moonBold p-2">{{weddingInfo.receptionVenue}}</div>
     <div class="text-yellow-800 text-sm lg:text-2xl font-moonBold p-2">{{weddingInfo.receptionTime}}</div>
 
-    <button class="mt-6 bg-transparent hover:bg-yellow-600 text-white font-moonBold hover:text-white py-2 px-4 border border-yellow-800 hover:border-transparent rounded">
+    <button class="animate-bounce mt-6 bg-transparent hover:bg-yellow-600 text-white font-moonBold hover:text-white py-2 px-4 border border-yellow-800 hover:border-transparent rounded">
       RSVP
     </button>
   </div>
