--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -1,6 +1,6 @@
 <div class="justify-center flex items-center absolute top-0 right-0 bottom-0 left-0">
   <div class="bg-white px-16 py-14 rounded-md font-moonBold text-2xl rounded-3xl">
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" *ngIf="isAttending">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" >
       <div class="pb-4">
         <div class="pb-2">
           <label for="name">Name on invite</label>
@@ -10,7 +10,22 @@
           <input id="name" type="text" formControlName="name" class="border-2 border-black rounded-2xl p-4 pl-14">
         </div>
       </div>
-      <div class="pb-4">
+      <div class="pb-4 text-2xl">
+        <p>Are you attending?</p>
+        <div class="flex">
+          <div>
+            <button class="{{isAttending == null || isAttending == true ?  'bg-green-600' : 'bg-gray-400'}} hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4" (click)="toggleGuestForm(true)">
+              Yes
+            </button>
+          </div>
+          <div>
+            <button class="{{isAttending == null || isAttending == false ?  'bg-red-600' : 'bg-gray-400'}} hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl" (click)="toggleGuestForm(false)">
+              No
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="pb-4" *ngIf="isAttending">
         <div>
           <label for="numberOfGuests">Number Of Guests</label>
         </div>
@@ -19,32 +34,15 @@
           <input id="numberOfGuests" type="number" formControlName="numberOfGuests"
                  class="border-2 border-black rounded-2xl p-4 pl-14">
         </div>
-
-      </div>
-      <div class="flex justify-center text-xl">
-        <button class="bg-red-600 hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl mr-4" (click)="onCancel()">
-          Cancel
-        </button>
-        <button type="submit" class="bg-green-600 hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4">
-          Submit
-        </button>
       </div>
     </form>
-
-    <div *ngIf="!isAttending" class="pb-4 text-2xl">
-      <p>Are you attending?</p>
-      <div class="flex justify-center">
-        <div>
-          <button class="bg-green-600 hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4" (click)="toggleGuestForm(true)">
-            Yes
-          </button>
-        </div>
-        <div>
-          <button class="bg-red-600 hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl" (click)="toggleGuestForm(false)">
-            No
-          </button>
-        </div>
-      </div>
+    <div class="flex text-xl">
+      <button type="submit" class="bg-green-600 hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4">
+        Submit
+      </button>
+      <button class="bg-red-600 hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl mr-4" (click)="onCancel()">
+        Cancel
+      </button>
     </div>
   </div>
 </div>
