--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -7,21 +7,22 @@
         </div>
         <div class="relative flex items-center text-gray-400 focus-within:text-gray-600">
           <fa-icon class="absolute ml-4 pointer-events-none" [icon]="faText"></fa-icon>
-          <input id="name" type="text" formControlName="name" class="border-2 border-black rounded-2xl p-4 pl-14">
+          <input id="name" type="text" formControlName="name" class="border-2 rounded-2xl p-4 pl-14 {{ name?.invalid && (name?.dirty || name?.touched) ? 'border-red-600' : 'border-black'}}">
         </div>
+        <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="text-red-600 text-sm">Name is required</div>
       </div>
       <div class="pb-4 text-2xl">
         <p>Are you attending?</p>
         <div class="flex">
           <div>
-            <button class="{{isAttending == null || isAttending == true ?  'bg-green-600' : 'bg-gray-400'}} hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4" (click)="toggleGuestForm(true)">
+            <div class="{{isAttending == null || isAttending == true ?  'bg-green-600' : 'bg-gray-400'}} hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4" (click)="toggleGuestForm(true)">
               Yes
-            </button>
+            </div>
           </div>
           <div>
-            <button class="{{isAttending == null || isAttending == false ?  'bg-red-600' : 'bg-gray-400'}} hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl" (click)="toggleGuestForm(false)">
+            <div class="{{isAttending == null || isAttending == false ?  'bg-red-600' : 'bg-gray-400'}} hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl" (click)="toggleGuestForm(false)">
               No
-            </button>
+            </div>
           </div>
         </div>
       </div>
@@ -32,17 +33,20 @@
         <div class="relative flex items-center text-gray-400 focus-within:text-gray-600">
           <fa-icon class="absolute ml-4 pointer-events-none" [icon]="faNumbers"></fa-icon>
           <input id="numberOfGuests" type="number" formControlName="numberOfGuests"
-                 class="border-2 border-black rounded-2xl p-4 pl-14">
+                 class="border-2 rounded-2xl p-4 pl-14 {{ numberOfGuests?.invalid && (numberOfGuests?.dirty || numberOfGuests?.touched) ? 'border-red-600' : 'border-black'}}">
         </div>
+        <div *ngIf="numberOfGuests?.invalid && (numberOfGuests?.dirty || numberOfGuests?.touched)" class="text-red-600 text-sm">Number of guests cannot be less than 1 and more than 11</div>
+
+      </div>
+      <div class="flex text-xl">
+        <button type="submit" class="bg-green-600 hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4">
+          Submit
+        </button>
+        <button class="bg-red-600 hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl mr-4" (click)="onCancel()">
+          Cancel
+        </button>
       </div>
     </form>
-    <div class="flex text-xl">
-      <button type="submit" class="bg-green-600 hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4">
-        Submit
-      </button>
-      <button class="bg-red-600 hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl mr-4" (click)="onCancel()">
-        Cancel
-      </button>
-    </div>
+
   </div>
 </div>
