--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -35,7 +35,9 @@
           <input id="numberOfGuests" type="number" formControlName="numberOfGuests"
                  class="border-2 rounded-2xl p-4 pl-14 {{ numberOfGuests?.invalid && (numberOfGuests?.dirty || numberOfGuests?.touched) ? 'border-red-600' : 'border-black'}}">
         </div>
-        <div *ngIf="numberOfGuests?.invalid && (numberOfGuests?.dirty || numberOfGuests?.touched)" class="text-red-600 text-sm">Number of guests cannot be less than 1 and more than 11</div>
+        <div *ngIf="numberOfGuests?.invalid && (numberOfGuests?.dirty || numberOfGuests?.touched)" class="text-red-600 text-sm">
+          {{ numberOfGuests?.value == 0 ? 'Number of guests is required' : 'Number of guests cannot be less than 1 and more than 11' }}
+        </div>
 
       </div>
       <div class="flex text-xl">
