--- a/src/app/components/rsvp/rsvp.component.html
+++ b/src/app/components/rsvp/rsvp.component.html
@@ -1,14 +1,17 @@
-<div class="bg-yellow-600 h-screen w-screen bg-photo bg-cover bg-center">
-  <div class="lg:flex justify-center items-center text-white font-bodyLuci lg:text-6xl md:text-3xl ml-6 pt-6">
-    <div class="p-2 mr-4">Sylvana
-      <span class="font-dancingScript">&</span> Ezekiel
+<div class="h-screen w-screen bg-yellow-600 bg-photo bg-cover bg-center">
+  <div
+    class="ml-6 items-center justify-center pt-6 font-bodyLuci text-white md:text-3xl lg:flex lg:text-6xl"
+  >
+    <div class="mr-4 p-2">
+      Sylvana <span class="font-dancingScript">&</span> Ezekiel
     </div>
-    <div class="p-2 mr-4">
+    <div class="mr-4 p-2">
       <span class="font-dancingScript">9th</span>
       <span>September</span>
       <span class="font-dancingScript">2022</span>
     </div>
-    <div class="p-2 font-dancingScript">5:00
+    <div class="p-2 font-dancingScript">
+      5:00
       <span class="font-bodyLuci">p.m.</span>
     </div>
   </div>
