--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,9 @@
-<h5>{{resultMessage}}</h5>
-<button *ngIf="true"
-        class="animate-bounce bg-transparent hover:bg-yellow-600 text-yellow-700 font-semibold hover:text-white py-3 px-8 border border-yellow-700 hover:border-transparent rounded"
-        (click)="logInWithFacebook('Facebook')">Login
-</button><button  (click)="signOut()" class="btn btn-success Facebook">Sign Out</button>
-<h1>{{userData.firstName}}</h1>
+<h5>{{ resultMessage }}</h5>
+<button
+  *ngIf="true"
+  class="animate-bounce rounded border border-yellow-700 bg-transparent py-3 px-8 font-semibold text-yellow-700 hover:border-transparent hover:bg-yellow-600 hover:text-white"
+  (click)="logInWithFacebook('Facebook')"
+>
+  Login</button
+><button (click)="signOut()" class="btn btn-success Facebook">Sign Out</button>
+<h1>{{ userData.firstName }}</h1>
