--- a/src/fonts/stylesheet.css
+++ b/src/fonts/stylesheet.css
@@ -1,46 +1,46 @@
 @font-face {
-    font-family: 'Wedding Dream Demo';
-    src: url('WeddingDreamDemoRegular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Wedding Dream Demo";
+  src: url("WeddingDreamDemoRegular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'Lucy Said Ok Personal Use';
-  src: url('LucySaidOkPersonalUse-Italic.woff') format('woff');
+  font-family: "Lucy Said Ok Personal Use";
+  src: url("LucySaidOkPersonalUse-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'shalma';
-  src: url('shalma.woff') format('woff');
+  font-family: "shalma";
+  src: url("shalma.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Blackberry Jam Personal Use';
-  src: url('BlackberryJamPersonalUse.woff') format('woff');
+  font-family: "Blackberry Jam Personal Use";
+  src: url("BlackberryJamPersonalUse.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Dancing Script';
-  src: url('DancingScript-Regular.woff') format('woff');
+  font-family: "Dancing Script";
+  src: url("DancingScript-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Moon Bold';
-  src: url('Moon-Bold.woff') format('woff');
+  font-family: "Moon Bold";
+  src: url("Moon-Bold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
