--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -2,7 +2,7 @@
   class="absolute top-0 right-0 bottom-0 left-0 flex items-center justify-center"
 >
   <div
-    class="rounded-md rounded-3xl bg-white px-16 py-14 font-moonBold text-2xl"
+    class="rounded-md rounded-3xl bg-white font-moonBold md:px-8 md:py-7 md:text-sm lg:px-16 lg:py-14 lg:text-2xl"
   >
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="pb-4">
@@ -34,7 +34,7 @@
           Name is required
         </div>
       </div>
-      <div class="pb-4 text-2xl">
+      <div class="pb-4">
         <p>Are you attending?</p>
         <div class="flex">
           <div>
@@ -43,7 +43,7 @@
                 isAttending == null || isAttending == true
                   ? 'bg-green-600'
                   : 'bg-gray-400'
-              }} hover:bg-green-400 text-white font-bold py-2 px-4 rounded-2xl mr-4"
+              }} hover:bg-green-400 text-white font-bold md:py-1 md:px-2 rounded-2xl mr-4"
               (click)="toggleGuestForm(true)"
             >
               Yes
@@ -55,7 +55,7 @@
                 isAttending == null || isAttending == false
                   ? 'bg-red-600'
                   : 'bg-gray-400'
-              }} hover:bg-red-400 text-white font-bold py-2 px-4 rounded-2xl"
+              }} hover:bg-red-400 text-white font-bold md:py-1 md:px-2 rounded-2xl"
               (click)="toggleGuestForm(false)"
             >
               No
@@ -100,7 +100,7 @@
           }}
         </div>
       </div>
-      <div class="flex text-xl">
+      <div class="flex">
         <button
           type="submit"
           class="mr-4 rounded-2xl bg-green-600 py-2 px-4 font-bold text-white hover:bg-green-400"
