Added iconlibrary from font awesome and confirmation box

--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -14,7 +14,7 @@
         >
           <fa-icon
             class="pointer-events-none absolute ml-4"
-            [icon]="faText"
+            icon="i-cursor"
           ></fa-icon>
           <input
             id="name"
@@ -72,7 +72,7 @@
         >
           <fa-icon
             class="pointer-events-none absolute ml-4"
-            [icon]="faNumbers"
+            icon="arrow-up-1-9"
           ></fa-icon>
           <input
             id="numberOfGuests"
