--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -1,6 +1,6 @@
 <div
   class="animate-fade-in-down2 {{
-    this.rsvpTriggered ? 'blur-3xl' : ''
+    rsvpTriggered || formSubmittedSuccessfully ? 'blur-3xl' : ''
   }} w-screen h-screen bg-photo bg-cover bg-center">
   <div
     class="pt-8 flex items-center justify-center font-bodyLuci text-white md:text-5xl lg:text-7xl">
@@ -24,7 +24,7 @@
   <div class="absolute inset-x-0 bottom-0 mb-12 p-5">
     <div class="flex items-center justify-center">
       <button
-        class="rounded border border-white bg-transparent font-moonBold text-white hover:border-transparent hover:bg-yellow-600 hover:text-white md:py-2 md:px-4 md:text-2xl lg:py-4 lg:px-8 lg:text-4xl"
+        class="rounded border border-white bg-transparent font-moonBold text-white hover:border-transparent hover:bg-gray-500 hover:text-white md:py-2 md:px-4 md:text-2xl lg:py-4 lg:px-8 lg:text-4xl"
         (click)="onClick(1)">
         RSVP
       </button>
@@ -34,5 +34,8 @@
 
 <app-attendance-form
   *ngIf="rsvpTriggered"
-  (isAttendingParent)="isAttendingTriggered($event)">
+  (formSubmittedSuccessfully)="formSubmitted($event)"
+  (inviteName)="inviteNameChanged($event)">
 </app-attendance-form>
+
+<app-form-confirmation [inviteName]="inviteName" *ngIf="formSubmittedSuccessfully && inviteName != ''"></app-form-confirmation>
