Fixed backend mappings and ok component

--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -17,6 +17,7 @@
             icon="i-cursor"
           ></fa-icon>
           <input
+            autocomplete="off"
             id="name"
             type="text"
             formControlName="name"
