--- a/src/fonts/stylesheet.css
+++ b/src/fonts/stylesheet.css
@@ -45,3 +45,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "BaskerVilleItalic";
+  src: url("BaskervilleItalic.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
