--- a/src/styles.css
+++ b/src/styles.css
@@ -31,3 +31,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.black-text-shadow {
+  text-shadow: 1px 1px 1px grey;
+}
