Update base url and message

--- a/src/app/components/form-confirmation/form-confirmation.component.html
+++ b/src/app/components/form-confirmation/form-confirmation.component.html
@@ -10,6 +10,7 @@
         Thank you {{ inviteName }}!
       </p>
       <p class="px-10 pb-5 font-moonBold text-xl">RSVP Confirmed</p>
+      <p class="px-10 pb-5 font-moonBold text-xl">Cash present appreciated</p>
     </div>
     <div class="flex items-center justify-center rounded-2xl bg-white p-10">
       <button
