--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -1,8 +1,8 @@
-<div
+<div 
   class="absolute top-0 right-0 bottom-0 left-0 flex items-center justify-center"
 >
-  <div
-    class="rounded-md rounded-3xl bg-white font-moonBold md:px-8 md:py-7 md:text-sm lg:px-16 lg:py-14 lg:text-2xl"
+  <div @openClose *ngIf="true"
+    class="rounded-3xl bg-white font-moonBold md:px-8 md:py-7 md:text-sm lg:px-16 lg:py-14 lg:text-2xl"
   >
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="pb-4">
