--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -29,7 +29,6 @@
     <div class="px-4">
       {{ weddingInfo.ceremonyVenue }}
     </div>
-    <div class="px-4">|</div>
     <div class="px-4">{{ weddingInfo.receptionVenue }}</div>
   </div>
   <div class="absolute inset-x-0 bottom-0 mb-12 p-5">
@@ -42,7 +41,7 @@
       </button>
     </div>
     <div
-      class="black-text-shadow flex flex-col items-center justify-center pt-6 italic text-white"
+      class="black-text-shadow lg:text-1xl flex flex-col items-center justify-center pt-6 italic text-white md:text-sm"
     >
       <p>With all that we have we've been truly blessed,</p>
       <p>Your presence and prayers are all that we request,</p>
