Updated the final design

--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -24,12 +24,16 @@
     </div>
   </div>
   <div
-    class="black-text-shadow md:text-1xl flex items-center justify-center pt-6 font-moonBold text-white md:flex-col lg:flex-row lg:text-3xl"
+    class="black-text-shadow md:text-1xl flex flex-col items-center justify-center pt-6 font-moonBold text-white lg:text-3xl"
   >
-    <div class="px-4">
-      {{ weddingInfo.ceremonyVenue }}
+    <div class="flex flex-row px-4 md:pb-3 lg:pb-5">
+      <fa-icon icon="church"></fa-icon>
+      <p class="px-4">{{ weddingInfo.ceremonyVenue }}</p>
     </div>
-    <div class="px-4">{{ weddingInfo.receptionVenue }}</div>
+    <div class="flex flex-row px-4">
+      <fa-icon icon="champagne-glasses"></fa-icon>
+      <div class="px-4">{{ weddingInfo.receptionVenue }}</div>
+    </div>
   </div>
   <div class="absolute inset-x-0 bottom-0 mb-12 p-5">
     <div class="flex items-center justify-center">
@@ -43,9 +47,9 @@
     <div
       class="black-text-shadow lg:text-1xl flex flex-col items-center justify-center pt-6 italic text-white md:text-sm"
     >
-      <p>With all that we have we've been truly blessed,</p>
-      <p>Your presence and prayers are all that we request,</p>
-      <p>But if you desire to give nonetheless,</p>
+      <p>With all that we have we've been truly blessed.</p>
+      <p>Your presence and prayers are all that we request.</p>
+      <p>But if you desire to give nonetheless.</p>
       <p>Monetary gift is one we suggest.</p>
     </div>
   </div>
