--- a/src/app/components/form-confirmation/form-confirmation.component.html
+++ b/src/app/components/form-confirmation/form-confirmation.component.html
@@ -5,16 +5,26 @@
     class="flex flex-col rounded-2xl border-green-500 bg-green-600 shadow-md"
   >
     <div class="flex flex-col items-center justify-center text-white">
-      <fa-icon class="px-10 pt-10 pb-5 text-5xl" icon="circle-check"></fa-icon>
-      <p class="px-10 pb-5 font-moonBold text-xl" *ngIf="inviteName != ''">
+      <fa-icon
+        class="pb-5 text-5xl md:px-5 md:pt-5 lg:px-10 lg:pt-10"
+        icon="circle-check"
+      ></fa-icon>
+      <p
+        class="px-10 pb-5 font-moonBold md:text-base lg:text-xl"
+        *ngIf="inviteName != ''"
+      >
         Thank you {{ inviteName }}!
       </p>
-      <p class="px-10 pb-5 font-moonBold text-xl">RSVP Confirmed</p>
+      <p
+        class="font-moonBold md:px-5 md:pb-3 md:text-base lg:px-10 lg:pb-5 lg:text-xl"
+      >
+        RSVP Confirmed
+      </p>
     </div>
     <div class="flex items-center justify-center rounded-2xl bg-white p-5">
       <button
         (click)="onConfirmed()"
-        class="rounded-2xl border-green-500 bg-green-600 py-2 px-4 font-moonBold text-white shadow-md"
+        class="rounded-2xl border-green-500 bg-green-600 py-2 px-4 font-moonBold text-white shadow-md md:text-xs lg:text-sm"
       >
         Ok
       </button>
