--- a/src/app/components/home/app.component.html
+++ b/src/app/components/home/app.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div
-    class="black-text-shadow md:text-1xl flex flex-col items-center justify-center pt-6 font-moonBold text-white lg:text-3xl"
+    class="black-text-shadow md:text-1xl flex flex-col items-center justify-center pt-6 font-moonBold text-white lg:text-2xl"
   >
     <div class="flex flex-row px-4 md:pb-3 lg:pb-5">
       <fa-icon icon="church"></fa-icon>
@@ -45,11 +45,11 @@
       </button>
     </div>
     <div
-      class="black-text-shadow lg:text-1xl flex flex-col items-center justify-center pt-6 italic text-white md:text-sm"
+      class="black-text-shadow flex flex-col items-center justify-center pt-6 italic text-white md:text-sm lg:text-xl"
     >
       <p>With all that we have we've been truly blessed.</p>
       <p>Your presence and prayers are all that we request.</p>
-      <p>But if you desire to give nonetheless.</p>
+      <p>But if you desire to give nonetheless,</p>
       <p>Monetary gift is one we suggest.</p>
     </div>
   </div>
